--- a/p2p-webrtc/pipecat-cloud/client/env.example
+++ b/p2p-webrtc/pipecat-cloud/client/env.example
@@ -1,3 +1,3 @@
-VITE_PIPECAT_BASE_URL=http://0.0.0.0:8000
-VITE_PIPECAT_PUBLIC_API=mock_key
-VITE_PIPECAT_AGENT_NAME=mock_agent
+VITE_PIPECAT_BASE_URL=https://api.pipecat.daily.co
+VITE_PIPECAT_PUBLIC_API=your_api_key
+VITE_PIPECAT_AGENT_NAME=your_agent_name
