--- a/p2p-webrtc/pipecat-cloud/Dockerfile
+++ b/p2p-webrtc/pipecat-cloud/Dockerfile
@@ -26,9 +26,7 @@ RUN --mount=type=cache,target=/root/.cache/uv \
 # python -m build
 COPY ./pipecatcloud-0.2.4.tar.gz pipecatcloud-0.2.4.tar.gz
 RUN uv pip install ./pipecatcloud-0.2.4.tar.gz
-COPY ./pipecat_ai-0.0.86.dev38.tar.gz pipecat_ai-0.0.86.dev38.tar.gz
-RUN uv pip install ./pipecat_ai-0.0.86.dev38.tar.gz
-# COPY ./.env .env
+COPY ./.env .env
 # --------- end of local development
 
 COPY ./bot.py bot.py
