--- a/websocket/server/env.example
+++ b/websocket/server/env.example
@@ -1,2 +1,6 @@
 GOOGLE_API_KEY=
 WEBSOCKET_SERVER= # Options: 'fast_api' or 'websocket_server'
+DEFAULT_LANGUAGE=ar-SA
+FALLBACK_LANGUAGE=en-US
+ORGANIZATION_NAME=الهيئة
+ASSISTANT_NAME=ضياء
