adding RAG logic and fixes

--- a/websocket/server/env.example
+++ b/websocket/server/env.example
@@ -4,3 +4,18 @@ DEFAULT_LANGUAGE=ar-SA
 FALLBACK_LANGUAGE=en-US
 ORGANIZATION_NAME=الهيئة
 ASSISTANT_NAME=ضياء
+
+# RAG Knowledge Management System Configuration
+# Uses the same GOOGLE_API_KEY as your main bot for Gemini integration
+LLM_PROVIDER=google  # google, openai, azure, anthropic
+LLM_MODEL=gemini-1.5-flash
+CHROMA_PERSIST_DIR=./knowledge_base/chroma_db
+UPLOAD_DIR=./knowledge_base/documents
+PROCESSED_DIR=./knowledge_base/processed
+METADATA_DIR=./knowledge_base/metadata
+EMBEDDING_MODEL=sentence-transformers/all-MiniLM-L6-v2
+CHUNK_SIZE=500
+CHUNK_OVERLAP=50
+RETRIEVAL_TOP_K=5
+SIMILARITY_THRESHOLD=0.7
+MAX_CONTEXT_LENGTH=2000
